# VRHelloWorld

./: .gitignore  CMakeLists.txt  README.md
VRHello/: App.h
VRHello.xcodeproj/: project.pbxproj
VisualStudio/VRHelloWorld/: VRHelloWorld.sln  VRHelloWorld.vcxproj  VRHelloWorld.vcxproj.filters
VisualStudio/VRHelloWorld/Debug/: CL.read.1.tlog  CL.write.1.tlog  VRHelloWorld.ilk  VRHelloWorld.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
cmake/modules/: FindLEAPMOTION.cmake  FindSDL2.cmake
source/: App.cpp  App.h  CMakeLists.txt  main.cpp  util.cpp  util.h
source/shaders/: fragment.fsl  vertex.vsl
